--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,14 @@
     transform: rotate(360deg);
   }
 }
+
+.gallery-list {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.gallery-img {
+  height: 200px;
+  width: 200px;
+  margin: 10px;
+}
